# appsdk

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: app_definition.py  cli.py  config.py  deploy.py  mcp_server.py  prompts.py
scripts/: deploy.sh
